@@ -678,6 +678,9 @@ The available properties (along with their types) are:
 * int fuller_box_active
 * int melodik_active
 
+* int specdrum_active
+* libspectrum_signed_byte specdrum_dac
+
 Most of those should be fairly self-explanatory; those which may not
 be are:
 
